Bug 1873826 - Scrollbar gets hidden when opening dropdown menu

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -337,6 +337,10 @@
  * Global
  */
 
+html {
+  scrollbar-gutter: stable both-edges;
+}
+
 body {
   font-size: var(--font-size-medium);
   line-height: var(--line-height-default);
